@@ -2,6 +2,7 @@
 ------
 1. Add 'Play shuffled' for remote playlists.
 2. Fix disabling of playlist images.
+3. Add emblem for 'iBroadcast'.
 
 5.11.2
 ------
